--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha3 
	- Added reset of filters when switching between browse types this
		may be removed in the future...
	- Fixed LastFM submitting even when there was no username/password
	- Put Catalog 'All' Functions back onto catalog view
	- Fixed Admin Preferences reverting to user after first update
	- Fixed Localplay playlist
	- Updated Ajax Load icon (Thx Spocky) 
	- Replaced Flash Player with Lacy Morrow's (http://blog.lacymorrow.com/)
		(Thx Hugoh)
	- Fixed ACL's
	- Fixed incorrect Mime type being passed with transcoded songs due 
		to duplicate headers being passed
	- Fixed an issue where MPD was clearing all but last song in submit
		if its initial state was not play 
	- Added check for PHP5 to prevent ugly errors if missing
	- Fixed issue with NULL localplay controller causing fatal error
	- Fixed the Localplay Controls
	- Fixed Gathering album art to only gather for changed albums
	- Fixed display of catalog to correctly show catalog stats
	- Gather album art now only gathers for the specified catalog
	- Fixed Random methods (rightbar) 
	- Added Loading box for ajax actions
	- Added ability to append to existing playlists
	- Modified Play Method to use hidden iframe
	- Fixed album random and by min random 
	- Added Delete to Playlist and Live Streams (Radio)
	- Massive improvements to CSS (Thx Spocky) 
	- Addition of Greysme theme (Thx Spocky)
	- Basic MPD Support Restored
	- Moved catalog stats off to statistics page
	- Added basic sorting to all browse pages
	- Tweaked the Playback to try to fix some issues with WMP
	- Reduced the timeout on the LastFM Plugin to reduce delay
		when scrobbling is down