@@ -4,6 +4,9 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha3 
+	- Fixed catalog update and album art dump command line tools
+	- Removed dead link for renaming an Artist
+	- Fixed batch download of a single album
 	- Added reset of filters when switching between browse types this
 		may be removed in the future...
 	- Fixed LastFM submitting even when there was no username/password
